--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -16,9 +16,6 @@
             flex-direction: column;
         }
 
-
-        
-        
         img{
             height: 100%;
             
@@ -39,6 +36,7 @@
             font-size: 30px;
             overflow: hidden;
             font-weight: 800;
+            color: #333333;
 
             @include mobile{
                 font-size: 25px;
@@ -55,9 +53,7 @@
 
             @include mobile{
                 height: 100%;
-            }
-
-    
+            }    
 
             label{
                 font-size: 20px;
