--- a/src/components/works/Work.scss
+++ b/src/components/works/Work.scss
@@ -5,14 +5,10 @@
     width: 100%;
     background-color: #FFFFFF;
     display: flex;
-    // align-items: center;
     justify-content: center;
     overflow: hidden;
 
     .topbar{
-        // background-color:#2587be;
-        background-color: #2587BE;
-        // background-color: crimson;
         width: 100vw;
         height: 80px;
         display: flex;
@@ -27,10 +23,8 @@
     }
 
     .section{
-        // background-color: rgb(98, 105, 144);
         width: 100vw;
         height: calc(100vh - 70px);
-        // height: 100vh;
         top: 100px;
         display: flex;
         flex-direction: column;
@@ -42,25 +36,19 @@
 
         .row1{
             width: 100vw;
-            // height: calc(100vh - 650px);
             height: 250px;
             display: flex;
             align-items: center;
-            // justify-content: center;
             justify-content: space-around;
             overflow: hidden;
-            // background-color: aqua;
 
 
             .columb1{
-                background-color: black;
                 width: 250px;
                 height: 250px;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                // background-color: bisque;
-                background-color: #25a5be;
                 overflow: hidden;
                 border: 2px;
                 border-radius: 15px;
@@ -78,8 +66,8 @@
                 img{
                     height: 150px;
                     width: auto;
-                    // border-radius: 50%;
                     margin-bottom: 15px;
+                    border-radius: 2px;
                 }
 
                 h4{
@@ -101,14 +89,7 @@
                     }
                 }
 
-
-            }
-
-            
-
-            
-
-            
+            }            
 
         }
 
