footer added , app.scss removed

--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -5,6 +5,8 @@
     background-color: #F5F5F5;
     display: flex;
     overflow: hidden;
+    position: relative;
+    margin-top: 6%;
     // background-image: url(../images/bg.jpg);
     
 
