--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -98,6 +98,7 @@ hr{
     line-height: 15px;
     color: rgb(255,255,255);
     font-weight: 600;
+    overflow: hidden;
 }
 
 @media screen and (max-width:850px) {
